# cadmus

./: .codecov.yml  .coderabbit.yaml  .editorconfig  .env  .gitignore  .gitmodules  .markdownlint.json  .prettierrc.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  REVIEW.md  crowdin.yml  devenv.nix  devenv.yaml  package-lock.json  package.json  release-please-config.json  renovate.json  wrangler.toml
.cargo/: config.toml
.cursor/: CLOUD.md
.devin/: wiki.json
.github/: copilot-instructions.md  dependabot.yml
.sqlx/: query-10c2db2a19e2c40c1c6b943cae3202f13a41b499253dec9d15476a6654fa4668.json  query-15f3a3b3fe06c65da11a33510d7c43069d35e9d63b0b7a45fc46dc5e0b8b12bb.json  (+82 more)
contrib/: cadmus.sh  (+4 more)
crates/cadmus/: Cargo.toml
crates/cadmus/src/: app.rs  main.rs
crates/core/: AGENTS.md  Cargo.toml  REVIEW.md  build.rs
crates/core/benches/: fingerprint_bench.rs
crates/core/i18n/en-GB/: cadmus_core.ftl
crates/core/migrations/: 001_initial_schema.sql  002_add_reading_state_columns_to_view.sql  003_strict_cadmus_migrations.sql  004_per_library_file_path.sql  006_installed_dictionary.sql
crates/core/src/: assets.rs  context.rs  crypto.rs  geolocation.rs  gesture.rs  helpers.rs  http.rs  i18n.rs  input.rs  lib.rs  logging.rs  metadata.rs  profiling.rs  rtc.rs  telemetry.rs  time_manager.rs  version.rs
crates/core/src/battery/: fake.rs  kobo.rs  mod.rs
crates/core/src/db/: backup.rs  mod.rs  runtime.rs  types.rs  version.rs
crates/core/src/db/migrations/: example.rs  mod.rs
crates/core/src/device/: error.rs  forward.rs  metadata.rs  migration.rs  mod.rs  model.rs  test_device.rs  time.rs  types.rs
crates/core/src/device/emulator/: mod.rs  power.rs  rtc.rs  usb.rs  wifi.rs
crates/core/src/device/kobo/: device.rs  factory.rs  input.rs  mod.rs  model.rs  power.rs
crates/core/src/device/kobo/lifecycle/: battery.rs  device_events.rs  frontlight.rs  helpers.rs  mod.rs  power.rs  suspend.rs  test_helpers.rs  usb_share.rs  wifi.rs
crates/core/src/device/kobo/usb/: legacy.rs  mod.rs  mtk.rs  operations.rs
crates/core/src/device/kobo/wifi/: mod.rs  types.rs
crates/core/src/device/linux/: mod.rs  rtc.rs  time.rs
crates/core/src/device/power/: error.rs  manager.rs  mod.rs  stub.rs
crates/core/src/device/power/kobo/: mod.rs
crates/core/src/device/rtc/: manager.rs  mod.rs  test.rs
crates/core/src/device/usb/: error.rs  manager.rs  mod.rs  stub.rs
crates/core/src/device/usb/kobo/: legacy.rs  mod.rs  mtk.rs  operations.rs
crates/core/src/device/wifi/: manager.rs  mod.rs
crates/core/src/device/wifi/kobo/: mod.rs
crates/core/src/dictionary/: db_index.rs  dictreader.rs  indexing.rs  mod.rs
crates/core/src/dictionary/monolingual/: client.rs  db.rs  metadata.rs  service.rs
crates/core/src/document/: mod.rs  mupdf_sys.rs  pdf.rs
crates/core/src/document/epub/: mod.rs
crates/core/src/document/html/: engine.rs  html5.rs  layout.rs  mod.rs  xml.rs
crates/core/src/document/tests/fixtures/: cbz-webp.cbz  epub-webp.epub
crates/core/src/font/: mod.rs
crates/core/src/framebuffer/: image.rs  kobo1.rs  kobo2.rs  mod.rs  transform.rs
crates/core/src/frontlight/: auto.rs  mod.rs  natural.rs  premixed.rs  standard.rs
crates/core/src/github/: client.rs  device_flow.rs  mod.rs  types.rs
crates/core/src/lightsensor/: kobo.rs  mod.rs
crates/core/src/logging/: kern.rs
crates/core/src/ota/: cleanup.rs  client.rs  mod.rs
crates/core/src/settings/: migrations.rs  mod.rs  versioned.rs
crates/core/src/task/: auto_frontlight.rs  dbus_monitor.rs  dictionary_index.rs  hello_world.rs  import.rs  mod.rs  thumbnail.rs  time_sync.rs  wifi_status_monitor.rs
crates/core/src/telemetry/: mod.rs  profiling.rs  shutdown.rs  tracing.rs
crates/core/src/view/: action_label.rs  battery.rs  button.rs  clock.rs  common.rs  device_auth.rs  dialog.rs  filler.rs  frontlight.rs  github.rs  icon.rs  image.rs  input_field.rs  intermission.rs  key.rs  keyboard.rs  label.rs  labeled_icon.rs  menu.rs  menu_entry.rs  mod.rs  named_input.rs  notification.rs  ota.rs  page_label.rs  preset.rs  presets_list.rs  progress_bar.rs  rounded_button.rs  search_bar.rs  slider.rs  startup.rs  toggle.rs  toggleable_keyboard.rs  top_bar.rs
crates/core/src/view/calculator/: bottom_bar.rs  code_area.rs  input_bar.rs  mod.rs
crates/core/src/view/dictionary/: bottom_bar.rs  mod.rs
crates/core/src/view/file_chooser/: file_entry.rs  mod.rs
crates/core/src/view/home/: address_bar.rs  book.rs  bottom_bar.rs  directories_bar.rs  directory.rs  library_label.rs  mod.rs  shelf.rs
crates/core/src/view/intermission/: calendar.rs  mod.rs
crates/core/src/view/navigation/: stack_navigation_bar.rs
crates/core/src/view/navigation/providers/: directory.rs
crates/core/src/view/reader/: bottom_bar.rs  chapter_label.rs  margin_cropper.rs  mod.rs  results_bar.rs  results_label.rs  tool_bar.rs
crates/core/src/view/rotation_values/: mod.rs
crates/core/src/view/settings_editor/: bottom_bar.rs  category.rs  category_button.rs  category_editor.rs  category_navigation_bar.rs  category_provider.rs  editor_utils.rs  library_editor.rs  mod.rs  refresh_rate_by_kind_editor.rs  setting_row.rs  setting_value.rs
crates/core/src/view/settings_editor/kinds/: dictionary.rs  general.rs  identity.rs  import.rs  intermission.rs  library.rs  mod.rs  reader.rs  telemetry.rs
crates/core/src/view/sketch/: mod.rs
crates/core/src/view/touch_events/: mod.rs
crates/emulator/: Cargo.toml  build.rs
crates/emulator/src/: main.rs
crates/fetcher/: Cargo.toml
crates/fetcher/src/: main.rs
crates/importer/: Cargo.toml
crates/importer/src/: main.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/src/tasks/: build_kobo.rs  bundle.rs  clippy.rs  dist.rs  docs.rs  download_assets.rs  fmt.rs  install_importer.rs  mod.rs  run_emulator.rs  setup.rs  setup_native.rs  test.rs
xtask/src/tasks/ci/: clippy_report.rs  install_doc_tools.rs  matrix.rs  mod.rs
xtask/src/tasks/util/: cmd.rs  fs.rs  github.rs  http.rs  matrix.rs  mod.rs  mupdf_wrapper.rs  thirdparty.rs  workspace.rs
(+150 files in other folders)
