[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/cadmus",
  "crates/emulator",
  "crates/importer",
  "crates/fetcher",
  "xtask",
]

[workspace.dependencies]
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "logging",
  "std",
  "tls12",
] }

[profile.release-minsized]
inherits = "release"
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
strip = true
