[package]
name = "xtask"
version = "0.9.46"
edition = "2024"
description = "Build, test, and release automation for Cadmus"

[lib]
name = "xtask_lib"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
toml = { version = "1.0.4", default-features = false, features = ["parse", "serde"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
walkdir = "2"
wildmatch = "2"

[dev-dependencies]
tempfile = "3"
