[package]
name = "cadmus"
version = "0.9.46"
edition = "2021"
authors = ["Cadmus Authors", "Bastien Dejean <nihilhill@gmail.com> (original Plato author)"]

[[bin]]
name = "cadmus"
path = "src/main.rs"

[features]
default = ["kobo"]
test = ["cadmus-core/test"]
otel = ["cadmus-core/otel"]
kobo = ["cadmus-core/kobo"]

[dependencies]
cadmus-core = { path = "../core" }
tracing = "0.1"
