[package]
name = "cadmus"
version = "0.10.0"
edition = "2021"
authors = ["Cadmus Authors", "Bastien Dejean <nihilhill@gmail.com> (original Plato author)"]

[[bin]]
name = "cadmus"
path = "src/main.rs"

[features]
default = ["kobo"]
test = ["cadmus-core/test"]
tracing = ["cadmus-core/tracing"]
profiling = ["cadmus-core/profiling", "tikv-jemallocator"]
telemetry = ["cadmus-core/telemetry", "tracing", "profiling", "tikv-jemallocator"]
kobo = ["cadmus-core/kobo"]

[dependencies]
cadmus-core = { path = "../core" }
tikv-jemallocator = { version = "0.6", features = ["profiling"], optional = true }
tracing = "0.1"
