[package]
name = "cadmus"
version = "0.12.0"
edition = "2024"
authors = ["Cadmus Authors", "Bastien Dejean <nihilhill@gmail.com> (original Plato author)"]

[[bin]]
name = "cadmus"
path = "src/main.rs"

[features]
default = []
test = ["cadmus-core/test"]
tracing = ["cadmus-core/tracing"]
profiling = ["cadmus-core/profiling", "tikv-jemallocator"]
telemetry = ["cadmus-core/telemetry", "tracing", "profiling", "tikv-jemallocator"]
kobo = ["cadmus-core/kobo"]
emulator = ["cadmus-core/emulator"]

[dependencies]
cadmus-core = { path = "../core" }
tikv-jemallocator = { version = "0.7", features = ["profiling"], optional = true }
tracing = "0.1"

[lints]
workspace = true
