[package]
name = "cadmus-core"
version = "0.9.46"
edition = "2021"
authors = [
    "Cadmus Authors",
    "Bastien Dejean <nihilhill@gmail.com> (original Plato author)",
]

[lib]
crate-type = ["rlib"]

[dependencies]
bitflags = "2.10.0"
downcast-rs = "2.0.2"
lazy_static = "1.5.0"
libc = "0.2.180"
png = "0.18.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
titlecase = "3.6.0"
unicode-normalization = "0.1.25"
toml = "1.0.0"
zip = "7.0.0"
kl-hyphenate = "0.7.3"
entities = "1.0.1"
paragraph-breaker = "0.4.4"
xi-unicode = "0.3.0"
septem = "1.1.0"
byteorder = "1.5.0"
flate2 = "1.1.5"
levenshtein = "1.0.5"
nix = { version = "0.31.0", features = ["fs", "ioctl"] }
indexmap = { version = "2.13.0", features = ["serde"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
secrecy = { version = "0.10", features = ["serde"] }
walkdir = "2.5.0"
globset = "0.4.18"
fxhash = "0.2.1"
rand_core = "0.10.0"
rand_xoshiro = "0.8.0"
percent-encoding = "2.3.2"
rust-embed = { version = "8.11", features = ["include-exclude"] }
chrono = { version = "0.4.42", features = [
    "serde",
    "clock",
], default-features = false }

reqwest = { version = "0.13.1", default-features = false, features = [
    "blocking",
    "json",
    "rustls-no-provider",
] }
rustls = { workspace = true }
webpki-roots = "1.0.5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry-appender-tracing = { version = "0.31", optional = true }
opentelemetry = { version = "0.31", features = ["trace", "logs"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["trace", "logs", "http-proto", "reqwest-blocking-client"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["trace", "logs", "rt-tokio-current-thread"], optional = true }
opentelemetry-semantic-conventions = { version = "0.31", optional = true }
log = "0.4.29"
uuid = { version = "1.20.0", features = ["v7"] }
gethostname = {version = "1.1.0", optional = true }

[dev-dependencies]
tempfile = "3.14"

[build-dependencies]
uuid = { version = "1.20.0", features = ["v7"] }

[features]
default = []
emulator = []
test = []
otel = [
    "tracing-opentelemetry",
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry-appender-tracing",
    "opentelemetry_sdk",
    "opentelemetry-semantic-conventions",
    "gethostname",
]
