[package]
name = "cadmus-core"
version = "0.12.0"
edition = "2024"
authors = [
    "Cadmus Authors",
    "Bastien Dejean <nihilhill@gmail.com> (original Plato author)",
]

[lib]
crate-type = ["rlib"]

[dependencies]
bitflags = "2.10.0"
blake3 = { version = "1", features = ["mmap", "rayon"] }
downcast-rs = "2.0.2"
lazy_static = "1.5.0"
libc = "0.2.180"
png = "0.18.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
titlecase = "3.6.0"
unicode-normalization = "0.1.25"
toml = "1.1.2"
zip = "8.0.0"
kl-hyphenate = "0.7.3"
entities = "1.0.1"
paragraph-breaker = "0.4.4"
xi-unicode = "0.3.0"
septem = "1.1.0"
byteorder = "1.5.0"
flate2 = "1.1.5"
levenshtein = "1.0.5"
nix = { version = "0.31.0", features = ["fs", "ioctl", "mount"] }
indexmap = { version = "2.13.0", features = ["serde"] }
arc-swap = "1"
anyhow = "1.0.100"
thiserror = "2.0.17"
secrecy = { version = "0.10", features = ["serde"] }
walkdir = "2.5.0"
globset = "0.4.18"
fxhash = "0.2.1"
html5ever = "0.39"
humanize-bytes = "1.0.6"
humantime = "2"
rand_core = "0.10.0"
rand_xoshiro = "0.8.0"
percent-encoding = "2.3.2"
rust-embed = { version = "8.11", features = ["include-exclude"] }
i18n-embed = { version = "0.16", features = ["fluent-system", "rust-embed"] }
i18n-embed-fl = "0.10"
unic-langid = { version = "0.9", features = ["macros", "serde"] }
chrono = { version = "0.4.42", features = [
    "serde",
    "clock",
], default-features = false }
chrono-tz = "0.10"
sunrise = "3.0"
reqwest = { version = "0.13.1", default-features = false, features = [
    "blocking",
    "form",
    "json",
    "rustls-no-provider",
] }
rustls = { workspace = true }
sntpc = { version = "0.11", features = ["std", "sync"] }
sntpc-net-std = "1.2"
webpki-roots = "1.0.5"

ctor = "1.0"
once_cell = "1.20.2"
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "sqlite-unbundled",
    "migrate",
    "chrono",
    "macros",
], default-features = false }
libsqlite3-sys = { version = "0.30", default-features = false }
tokio = { version = "1.40", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
sdl2 = { workspace = true, optional = true }

tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
tracing-opentelemetry = { version = "0.33", optional = true }
opentelemetry-appender-tracing = { version = "0.32", optional = true }
opentelemetry = { version = "0.32", features = ["trace", "logs"], optional = true }
opentelemetry-otlp = { version = "0.32", features = ["trace", "logs", "http-proto", "reqwest-blocking-client"], optional = true }
opentelemetry_sdk = { version = "0.32", features = ["trace", "logs", "rt-tokio-current-thread"], optional = true }
opentelemetry-semantic-conventions = { version = "0.32", optional = true }
pyroscope = { version = "2.0", default-features = false, features = ["backend-jemalloc", "backend-pprof-rs", "rustls-no-provider"], optional = true }
tikv-jemallocator = { version = "0.7", features = ["profiling"], optional = true }

log = "0.4.29"
uuid = { version = "1.20.0", features = ["v7"] }
gethostname = { version = "1.1.0", optional = true }
zbus = { version = "5", default-features = false, features = ["tokio"], optional = true }
futures-util = { version = "0.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.18", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.14"

[[bench]]
name = "fingerprint_bench"
harness = false

[[bench]]
name = "dictionary_bench"
harness = false

[build-dependencies]
anyhow = "1"
blake3 = "1"
build-deps = { path = "../build-deps" }
cc = { workspace = true }
uuid = { version = "1.20.0", features = ["v7"] }

[features]
default = []
device = []
# device-list-start
emulator = ["sdl2", "device"]
deviceless = ["device"]
kobo = ["procfs", "zbus", "futures-util", "device"]
# device-list-end
test = []
bench = []
tracing = [
    "tracing-opentelemetry",
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry-appender-tracing",
    "opentelemetry_sdk",
    "opentelemetry-semantic-conventions",
    "gethostname",
]
profiling = ["pyroscope", "tikv-jemallocator"]
telemetry = ["tracing", "profiling"]
docs = [
    "deviceless",
    "zbus",
    "futures-util",
    "sdl2",
    "procfs",
    "device",
]

[lints]
workspace = true
