[package]
name = "emulator"
version = "0.11.0"
edition = "2024"
authors = ["Cadmus Authors", "Bastien Dejean <nihilhill@gmail.com> (original Plato author)"]

[[bin]]
name = "cadmus-emulator"
path = "src/main.rs"

[dependencies]
cadmus-core = { path = "../core" }
sdl2 = "0.38.0"
tikv-jemallocator = { version = "0.6", features = ["profiling"], optional = true }
tracing = "0.1"

[features]
default = ["emulator"]
emulator = ["cadmus-core/emulator"]
tracing = ["cadmus-core/tracing"]
profiling = ["cadmus-core/profiling", "tikv-jemallocator"]
telemetry = ["cadmus-core/telemetry", "tracing", "profiling", "tikv-jemallocator"]
test = ["cadmus-core/test"]

[lints]
workspace = true
