[package]
name = "fetcher"
version = "0.11.0"
edition = "2021"
authors = ["Cadmus Authors", "Bastien Dejean <nihilhill@gmail.com> (original Plato author)"]

[[bin]]
name = "article_fetcher"
path = "src/main.rs"

[dependencies]
cadmus-core = { path = "../core" }
signal-hook = "0.4.1"

[dependencies.reqwest]
version = "0.13.1"
features = ["blocking", "json", "query", "rustls"]
default-features = false
