[package]
name = "fetcher"
version = "0.12.0"
edition = "2024"
authors = ["Cadmus Authors", "Bastien Dejean <nihilhill@gmail.com> (original Plato author)"]

[[bin]]
name = "article_fetcher"
path = "src/main.rs"

[dependencies]
cadmus-core = { path = "../core", features = ["deviceless"] }
signal-hook = "0.4.1"

[dependencies.reqwest]
version = "0.13.1"
features = ["blocking", "json", "query", "rustls"]
default-features = false

[lints]
workspace = true
