[package]
name = "importer"
version = "0.12.0"
edition = "2024"
authors = ["Cadmus Authors", "Bastien Dejean <nihilhill@gmail.com> (original Plato author)"]

[[bin]]
name = "cadmus-import"
path = "src/main.rs"

[dependencies]
cadmus-core = { path = "../core", features = ["deviceless"] }
getopts = "0.2.24"

[lints]
workspace = true
